<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:id="@+id/layout2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:text="@string/registerActivitytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/editTextUserName"
            android:hint="@string/registerActivityuser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerActivityemail"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btcreate_account"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_custom"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
