<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/bgNoteActTitle"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/edTituloBg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/bgNoteActTitleinsira_um_t_tulo"
                android:inputType="textAutoComplete"
                android:textColor="#000000">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            style="@style/linearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textAutoComplete"
                android:text="@string/bgNoteActTitleCaracter_sticas"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bgNoteActTitletipo_de_valores" />

                <Spinner
                    android:id="@+id/spLucroDespesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bgNoteActTitletipo_de_despesa" />

                <Spinner
                    android:id="@+id/spTipoValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bgNoteActTitleconta" />

                <Spinner
                    android:id="@+id/spContas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bgNoteActTitlevalor"
                    tools:text="@string/bgNoteActTitleInsrtValue" />

                <EditText
                    android:id="@+id/edtValor"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bgNoteActTitleHintinsira_valor"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/bgNoteActTitleobserva_es"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/edtDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contextClickable="false"
                android:gravity="left|top"
                android:hint="@string/bgNoteActTitledescri_o"
                android:scrollbars="vertical"
                android:textColor="@android:color/background_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="1000dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:onClick="openGallery"
                android:src="@drawable/noimagefound" />

            <Button
                android:id="@+id/buttonTakePicture"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_menu_camera"
                android:gravity="center_vertical|center_horizontal|center"
                android:onClick="takePicture" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>